--- a/templates/edit_spot.html
+++ b/templates/edit_spot.html
@@ -4,6 +4,7 @@
 <h2>Edit Spot</h2>
 
 <form action="/spot/{{ spot['id'] }}/edit" method="POST">
+
   <label>Name:</label><br>
   <input type="text" name="name" value="{{ spot['name'] }}" required><br><br>
 
@@ -16,8 +17,41 @@
   <label>Longitude:</label><br>
   <input type="number" step="0.000001" name="longitude" value="{{ spot['longitude'] }}"><br><br>
 
+  <p>Tags:</p>
+
+  <label>
+    <input type="checkbox" name="late_night" value="1" {% if spot['late_night'] %}checked{% endif %}>
+    Late Night
+  </label><br>
+
+  <label>
+    <input type="checkbox" name="fine_dining" value="1" {% if spot['fine_dining'] %}checked{% endif %}>
+    Fine Dining
+  </label><br>
+
+  <label>
+    <input type="checkbox" name="health_conscious" value="1" {% if spot['health_conscious'] %}checked{% endif %}>
+    Health Conscious
+  </label><br>
+
+  <label>
+    <input type="checkbox" name="affordable" value="1" {% if spot['affordable'] %}checked{% endif %}>
+    Affordable
+  </label><br>
+
+  <label>
+    <input type="checkbox" name="sweet_treat" value="1" {% if spot['sweet_treat'] %}checked{% endif %}>
+    Sweet Treat
+  </label><br>
+
+  <label>
+    <input type="checkbox" name="close" value="1" {% if spot['close'] %}checked{% endif %}>
+    Close to Harvard Yard
+  </label><br><br>
+
   <button type="submit">Save Changes</button>
 </form>
+
 
 <a href="/spot/{{ spot['id'] }}">Cancel</a>
 {% endblock %}
