--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,15 @@
 
   <body>
     <header>
-      <h1>My Food App</h1>
+      <h1>
+        <!-- Harvard seal image -->
+        <img
+          src="{{ url_for('static', filename='harvard_seal.png') }}"
+          alt="Harvard Seal"
+          class="harvard_seal"
+        >
+        HarvardEats
+      </h1>
 
       <nav>
         <a href="/">Home</a> |
