--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,27 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h2>Log in</h2>
 
-<form action="/login" method="POST">
-  <label>Username:</label><br>
-  <input type="text" name="username" required><br><br>
+<div class="card">
+  <div class="card-header">
+    <div>
+      <h2 class="card-title">Log in</h2>
+      <p class="card-subtitle">Access your saved spots and reviews.</p>
+    </div>
+  </div>
 
-  <label>Password:</label><br>
-  <input type="password" name="password" required><br><br>
+  <form action="/login" method="POST">
+    <label>Username</label>
+    <input type="text" name="username" required>
 
-  <button type="submit">Log in</button>
-</form>
+    <label class="mt-2">Password</label>
+    <input type="password" name="password" required>
 
-<p>Need an account? <a href="/register">Register</a></p>
+    <div class="mt-3">
+      <button type="submit" class="btn btn-primary">Log in</button>
+      <a href="/register" class="btn btn-outline">Need an account?</a>
+    </div>
+  </form>
+</div>
+
 {% endblock %}
