--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -10,6 +10,8 @@
     </div>
   </div>
 
+  <!-- Display favorite spots -->
+
   {% if spots %}
     <ul class="spot-list mt-2">
       {% for spot in spots %}
