--- a/templates/my_reviews.html
+++ b/templates/my_reviews.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<!-- Display my revies with all relevant info for each review-->
 <div class="card">
   <div class="card-header">
     <div>
