--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
+<!-- Register for a new account (need a Harvard email)-->
 <div class="auth-container">
 
   <h2>Create Harvard Account</h2>
