--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -10,6 +10,7 @@
     </div>
   </div>
 
+  <!-- Form posts spot data to thhe add-spot route -->
   <form action="/add-spot" method="POST">
 
     <label>Name</label>
@@ -24,7 +25,7 @@
     <label class="mt-2">Longitude</label>
     <input type="number" step="0.000001" name="longitude">
 
-    <!-- TAGS -->
+    <!-- Create various tag options -->
     <fieldset class="tag-fieldset mt-3">
       <legend>Tags</legend>
 
