--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
+<!-- Login page w/ username & password-->
 <div class="card">
   <div class="card-header">
     <div>
